# Crimson

./: .gitignore  CMakeLists.txt
Assets/: assetDatabase.db  ybot.fbx
Assets/Scripts/EngineScripts/: EngineLoader.lua  entity_behaviour.lua  name_displayer.lua
EngineScripts/: EntityBehaviour.lua  name_displayer.lua
Testing/: NotifierComponent.cpp  NotifierComponent.h
includes/Core/: Actor.h  Camera.h  EngineManager.h  InputManager.h  Object.h  TimeManager.h  Transform.h  sqlite3.h
includes/Core/AMS/: Asset.h  AssetManager.h  AssetType.h  MeshAsset.h  ModelAsset.h
includes/Core/ECS/: Component.h  Entity.h  Scene.h  SceneManager.h
includes/Core/Modules/: ECSModule.h  EngineModule.h  RenderModule.h  RenderWindowModule.h
includes/Rendering/: Material.h  MaterialLibrary.h  MaterialParameter.h  MeshInstance.h  MeshRenderer.h  RenderWindow.h  Shader.h  ShaderAsset.h  SubMesh.h  UniformBuffer.h  glad.h
includes/Rendering/Components/: MeshRenderer.h
includes/Rendering/Texture/: Texture.h
includes/Scripting/: ScriptingComponent.cpp  ScriptingComponent.h  ScriptingModule.cpp  ScriptingModule.h
includes/Utils/: AssimpParser.h  ElementList.h  Events.hpp
includes/glad/: glad.h
shaders/: simple_fragment.txt  simple_vertex.txt
src/: main.cpp
src/Core/: Actor.cpp  EngineManager.cpp  InputManager.cpp  Object.cpp  TimeManager.cpp  Transform.cpp
src/Core/AMS/: Asset.cpp  AssetManager.cpp  MeshAsset.cpp  ModelAsset.cpp  ShaderAsset.cpp
src/Core/ECS/: Entity.cpp  Scene.cpp  SceneManager.cpp
src/Core/EngineModules/: RenderModule.cpp  RenderWindowModule.cpp
src/Rendering/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Material.cpp  Material.h  MaterialLibrary.cpp  MaterialParameter.cpp  Mesh.cpp  Mesh.h  MeshInstance.cpp  MeshRenderer.cpp  RenderWindow.cpp  RenderWindow.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderAsset.cpp  ShaderManager.cpp  ShaderManager.h  SubMesh.cpp  UniformBuffer.cpp  UniformBuffer.h
src/Rendering/Primitves/: PlaneGeometry.cpp  PlaneGeometry.h
src/Rendering/Texture/: Texture.cpp
src/Rendering/glad/: glad.c  glad.h
src/Scripting/: ScriptingComponent.cpp  ScriptingModule.cpp
src/Utils/: AssimpParser.cpp  helpers.h
src/glad/: glad.c
